--- a/styles/main.css
+++ b/styles/main.css
@@ -220,3 +220,7 @@
 .styled-overflow::-webkit-scrollbar-thumb {
   background: var(--gray);
 }
+
+.next-error-h1 {
+  border-right: 1px solid rgb(255, 255, 255) !important;
+}
